fix css on button on safari IOS

--- a/src/components/TeamCard/styles.scss
+++ b/src/components/TeamCard/styles.scss
@@ -32,6 +32,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    border-radius: var(--radius-xl);
 
     &::before {
       content: '';
