--- a/src/components/Testimonial/styles.scss
+++ b/src/components/Testimonial/styles.scss
@@ -55,8 +55,8 @@
   }
 
   &-button {
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
     border-radius: var(--radius-full);
     background-color: var(--light-grey);
     border: none;
